--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <div class="data">
         <p>Name</p>
-        <p id="name" class="dlert-dlert-success"></p>
+        <p id="name" class="dlert dlert-success"></p>
         <p>Profile Pic</p>
-        <img id="miage" class="rounded-circle" width="100" height="100">
+        <img id="image" class="rounded-circle" width="100" height="100"/>
         <p>Email</p>
         <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
