--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="386930486769-cvja0agdbbjn6t6t58vihbaq9ee3p04j.apps.googleusercontent.com">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Sign In With Google Using JavaScript</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <title>Sign in With Google</title>
 </head>
+
 <body>
-    <h2 class="alert alert-primary">Sign In With Google Using JavaScript</h2>
+    <h2 class="alert alert-success">Sign-In With Google Using JavaScript</h2>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
     <div class="data">
         <p>Name</p>
-        <p id="name" class="dlert dlert-success"></p>
-        <p>Profile Pic</p>
-        <img id="image" class="rounded-circle" width="100" height="100"/>
+        <p id="name"></p>
+        <p>Image</p>
+        <img id="image" class="rounded-circle" width="100" height="100" />
         <p>Email</p>
         <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
-    <script src="index.js"></script>
+
+    <script src="index.js" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
+
 </html>
